upd token policy
